:sparkles: Add Notification endpoint
