# docs/swagger.json
@@ -166,7 +166,7 @@
                 "parameters": [
                     {
                         "description": "UUID",
-                        "name": "read",
+                        "name": "update",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -179,6 +179,42 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.UpdateResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/message/send/": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "メッセージを送信する",
+                "parameters": [
+                    {
+                        "description": "Topic",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Message"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.FCMResponse"
                         }
                     },
                     "500": {
@@ -226,6 +262,9 @@
                 "deleted_at": {
                     "type": "string"
                 },
+                "edge_id": {
+                    "type": "integer"
+                },
                 "uuid": {
                     "type": "string"
                 }
@@ -248,12 +287,40 @@
                 }
             }
         },
+        "models.FCMResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.InsertOneResult": {
             "type": "object",
             "properties": {
                 "insertedID": {
                     "description": "The _id of the inserted document. A value generated by the driver will be of type primitive.ObjectID.",
                     "type": "object"
+                }
+            }
+        },
+        "models.Message": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "tag": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "tokens": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
